c/examples/writing-a-c-compiler-tests/tests/chapter_17/invalid_types/scalar_expressions/and_void.c
// void expressions are non-scalar, so they can't be used in logical expressions

int main(void) {
    return (void)1 && 2;
}